Updated 2 files via CloudCannon.

--- a/src/forms/message-strategy-visit-milwaukee.html
+++ b/src/forms/message-strategy-visit-milwaukee.html
@@ -13,7 +13,7 @@ permalink: /message-strategy/visit-milwaukee
             <small>
 The Message Strategy exercise is the critical first step of any successful communications campaign or project. The end results of this process establish a road map for brands to follow in campaigns and efforts across all stakeholders and media. All materials generated should speak to the principles laid out in the Message Strategy.</small><br /><br />
 
-<small>This preliminary process often is part of a greater holistic effort to establish a clear, consistent strategy on behalf of the brand. Whether we are mere gaining insight to better inform our work, developing a brand framework centered on brand vision and goals, or outlining and articulating a communication approach in digital or physical spaces, this effort is key in helping us—and your core audiences—understand the core of what makes your brand/product/company tick.
+<small>This preliminary process often is part of a greater holistic effort to establish a clear, consistent strategy on behalf of the brand. Whether we are merely gaining insight to better inform our work, developing a brand framework centered on brand vision and goals, or outlining and articulating a communication approach in digital or physical spaces, this effort is key in helping us—and your core audiences—understand the core of what makes your brand/product/company tick.
 
             </small>
           </p>
