--- a/src/forms/proposal-survey.html
+++ b/src/forms/proposal-survey.html
@@ -9,16 +9,12 @@ permalink: /proposal/follow-up
       <div class="col-12">
         <div class="content pb-0">
           <h1 class="mt-5">Ocupop Testimonial</h1>
-          <p>Hello! Thanks for taking a few minutes out of your day to share why you love working with Ocupop. We know, FINALLY, a
-          place for you to voice that pent up adulation you've been storing up all these years!</p>
-
-          <p>All joking aside, we sincerely appreciate the support you've provided as clients, collaborators, and friends &mdash; and
-          we're humbled that you'd be so gracious as to offer a little peek into what makes working together so magical...and
-          successful.</p>
-          <div class="cognito">
-            <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>
-            <script>Cognito.load("forms", { id: "31" });</script>
-          </div>
+          <p>Hello! Thanks for taking a few minutes out of your day to share your thoughts and insight with us.</p>
+          <script src="https://www.cognitoforms.com/f/seamless.js" data-key="bbN8iw1MJUqjPe6aHn-_rw" data-form="129"></script>
+          <!--<div class="cognito">-->
+          <!--  <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>-->
+          <!--  <script>Cognito.load("forms", { id: "31" });</script>-->
+          <!--</div>-->
         </div>
       </div>
     </div>
