Updated 1 file via CloudCannon.

--- a/src/forms/proposal-survey.html
+++ b/src/forms/proposal-survey.html
@@ -6,7 +6,7 @@ permalink: /proposal/follow-up
 <section id="page-intro" class="pt-0">
   <div class="container">
     <div class="row">
-      <div class="col-12">
+      <div class="col-8 m-auto">
         <div class="content pb-0">
           <h1 class="mt-5">Ocupop Proposal Survey</h1>
           <p>Hello! Thanks for taking a few minutes out of your day to share your thoughts and insight with us.</p>
