Updated 1 file via CloudCannon.

--- a/src/forms/proposal-survey.html
+++ b/src/forms/proposal-survey.html
@@ -6,9 +6,9 @@ permalink: /proposal/follow-up
 <section id="page-intro" class="pt-0">
   <div class="container">
     <div class="row">
-      <div class="col-8 m-auto">
+      <div class="col-12 col-md-10 m-auto">
         <div class="content pb-0">
-          <h1 class="mt-5">Ocupop Proposal Survey</h1>
+          <!--<h1 class="mt-5">Ocupop Proposal Survey</h1>-->
           <p>Hello! Thanks for taking a few minutes out of your day to share your thoughts and insight with us.</p>
           <script src="https://www.cognitoforms.com/f/seamless.js" data-key="bbN8iw1MJUqjPe6aHn-_rw" data-form="129"></script>
           <!--<div class="cognito">-->
