Updated 1 file via CloudCannon.

--- a/src/forms/proposal-survey.html
+++ b/src/forms/proposal-survey.html
@@ -9,13 +9,14 @@ permalink: /proposal/follow-up
       <div class="col-12 col-md-10 m-auto">
         <div class="content pb-0">
           <!--<h1 class="mt-5">Ocupop Proposal Survey</h1>-->
-          <p>Hello! Thanks for taking a few minutes out of your day to share your thoughts and insight with us.</p>
+          <p class="py-5">Hello! Thanks for taking a few minutes out of your day to share your thoughts and insight with us.</p>
           <hr/>
-          <script src="https://www.cognitoforms.com/f/seamless.js" data-key="bbN8iw1MJUqjPe6aHn-_rw" data-form="129"></script>
-          <!--<div class="cognito">-->
-          <!--  <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>-->
-          <!--  <script>Cognito.load("forms", { id: "31" });</script>-->
-          <!--</div>-->
+          
+          <div class="cognito">
+            <!--<script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>-->
+            <!--<script>Cognito.load("forms", { id: "31" });</script>-->
+            <script src="https://www.cognitoforms.com/f/seamless.js" data-key="bbN8iw1MJUqjPe6aHn-_rw" data-form="129"></script>
+          </div>
         </div>
       </div>
     </div>
