Updated 2 files via CloudCannon.

--- a/src/contact.html
+++ b/src/contact.html
@@ -19,7 +19,7 @@ testimonial:
         </div>
       </div>
       <div class="col-12 col-lg-10 mx-lg-auto">
-        <div class="content">
+        <div id="contact-form" class="content">
           <script src="https://www.cognitoforms.com/f/seamless.js" data-key="bbN8iw1MJUqjPe6aHn-_rw" data-form="25"></script>
           <!-- <div id="contact-page-form" class="cognito">
             <div class="preloader">
