--- a/src/about.html
+++ b/src/about.html
@@ -92,7 +92,7 @@ testimonial:
     </div>
   </div>
 </div>
-<section id="team" class="py-0">
+<section id="team" class="py-0 bg-gray-800">
   <div class="row no-gutters">
     {% for member in site.data.staff %}
     <div class="col-md-4">
