--- a/src/forms/disney-discovery.html
+++ b/src/forms/disney-discovery.html
@@ -2,6 +2,7 @@
 layout: form
 title: Disney Discovery Questions
 permalink: /disney/discovery/
+sitemap: false
 ---
 <style>
     .c-forms-form-title { display: none !important; }
