--- a/src/forms/message-strategy-bayou-bend.html
+++ b/src/forms/message-strategy-bayou-bend.html
@@ -2,6 +2,7 @@
 layout: form
 title: 'Message Strategy: Bayou Bend'
 permalink: /message-strategy/bayou-bend/
+sitemap: false
 ---
 <section class="pt-0">
   <div class="container">
