Updated 6 files via CloudCannon.

--- a/src/forms/proposal-survey.html
+++ b/src/forms/proposal-survey.html
@@ -2,6 +2,7 @@
 layout: form
 title: Proposal Survey
 permalink: /proposal/follow-up/
+sitemap: false
 ---
 <section id="page-intro" class="pt-0">
   <div class="container">
