--- a/src/forms/seo-gap-analysis-questionnaire.html
+++ b/src/forms/seo-gap-analysis-questionnaire.html
@@ -2,6 +2,7 @@
 layout: form
 title: SEO Gap Analysis Questionnaire
 permalink: /seo-gap-analysis/questionaire/
+sitemap: false
 ---
 
 <section class="pt-0">
