--- a/src/forms/message-strategy-visit-milwaukee.html
+++ b/src/forms/message-strategy-visit-milwaukee.html
@@ -2,6 +2,7 @@
 layout: form
 title: 'Message Strategy: Visit Milwaukee'
 permalink: /message-strategy/visit-milwaukee/
+sitemap: false
 ---
 <section class="pt-0">
   <div class="container">
