Updated 2 files via CloudCannon.

--- a/src/search.html
+++ b/src/search.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Search
+sitemap: false
 ---
 <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url}}{{ page.url }}"
   aria-label="Linkedin link" target="_blank" rel="noopener">
