Updated 1 file via CloudCannon.

--- a/src/_projects/4p-foods.html
+++ b/src/_projects/4p-foods.html
@@ -21,6 +21,7 @@ videos:
     caption:
 tags:
   - branding
+sitemap: false
 ---
 
 <p>4P brings together individuals and families who want high-quality, fresh,
