Updated 2 files via CloudCannon.

--- a/src/_projects/amper.html
+++ b/src/_projects/amper.html
@@ -22,6 +22,7 @@ videos:
 tags:
   - branding
   - web
+sitemap: false
 ---
 
 <p>Amper is an AI music composer, performer, and producer that empowers
