--- a/src/focus.html
+++ b/src/focus.html
@@ -31,6 +31,7 @@ testimonial:
   </div>
 </section>
 <section>
+  <div class="container">
   <div class="row no-gutters">
     {% for focus in site.focuses %} {% assign project = site.projects | where:
     "slug", focus.project | first %}
@@ -49,6 +50,7 @@ testimonial:
       </div>
     </div>
     {% endfor %}
+  </div>
   </div>
 </section>
 <!-- <section class="text-center">
