--- a/src/forms/cr-template-builder-feedback.html
+++ b/src/forms/cr-template-builder-feedback.html
@@ -3,4 +3,6 @@ layout: form
 title: CR Template Builder Feedback
 permalink: /template-builder/feedback/
 ---
+<div class="py-10">
 <script src="https://www.cognitoforms.com/f/seamless.js" data-key="bbN8iw1MJUqjPe6aHn-_rw" data-form="149"></script>
+</div>
