Updated 1 file via CloudCannon.

--- a/src/forms/cr-template-builder-feedback.html
+++ b/src/forms/cr-template-builder-feedback.html
@@ -6,3 +6,8 @@ permalink: /template-builder/feedback/
 <div class="py-5">
 <script src="https://www.cognitoforms.com/f/seamless.js" data-key="bbN8iw1MJUqjPe6aHn-_rw" data-form="149"></script>
 </div>
+<style>
+  .cog-table td{
+    padding-bottom:10px;
+  }
+</style>
