Updated 1 file via CloudCannon.

--- a/src/forms/cr-template-builder-feedback.html
+++ b/src/forms/cr-template-builder-feedback.html
@@ -8,6 +8,8 @@ permalink: /template-builder/feedback/
 </div>
 <style>
   .cog-table td{
-    padding-bottom:10px;
+    padding-bottom: 16px !important;
+    vertical-align: top !important;
+    padding-right:5px !important;
   }
 </style>
