Updated 1 file via CloudCannon.

--- a/src/forms/cr-template-builder-feedback.html
+++ b/src/forms/cr-template-builder-feedback.html
@@ -12,4 +12,5 @@ permalink: /template-builder/feedback/
     vertical-align: top !important;
     padding-right:5px !important;
   }
+  .cog-table td .cog-choice{height:auto;}
 </style>
