Updated 1 file via CloudCannon.

--- a/src/forms/cr-template-builder-feedback.html
+++ b/src/forms/cr-template-builder-feedback.html
@@ -12,5 +12,6 @@ permalink: /template-builder/feedback/
     vertical-align: top !important;
     padding-right:5px !important;
   }
-  .cog-table td .cog-choice{height:auto;}
+  .cog-table td .cog-choice,
+  .cog-table td .cog-input{height:auto;}
 </style>
