Updated 1 file via CloudCannon.

--- a/src/forms/cr-template-builder-feedback.html
+++ b/src/forms/cr-template-builder-feedback.html
@@ -13,5 +13,5 @@ permalink: /template-builder/feedback/
     padding-right:5px !important;
   }
   .cog-table td .cog-choice,
-  .cog-table td .cog-input{height:auto;}
+  .cog-table td .cog-input{height:auto !important;}
 </style>
